[gd_scene load_steps=10 format=3 uid="uid://bsyknylsefx3b"]

[ext_resource type="Script" uid="uid://dqxhn4am3vsr3" path="res://world/GameUI.gd" id="1_h54ki"]
[ext_resource type="PackedScene" uid="uid://cyxdwyu8awtpf" path="res://ui/Toast.tscn" id="3_vx18r"]
[ext_resource type="PackedScene" path="res://ui/PauseMenu.tscn" id="4_pause"]
[ext_resource type="Material" uid="uid://7wuop4abysij" path="res://world/materials/SkyMaterial.tres" id="5_sky"]
[ext_resource type="Script" uid="uid://j7dotk38ix2b" path="res://world/sky.gd" id="6_sky"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7bgix"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_uwc0v"]
size = Vector3(50, 1, 50)

[sub_resource type="Sky" id="Sky_procedural"]
sky_material = ExtResource("5_sky")
process_mode = 2

[sub_resource type="Environment" id="Environment_xn32g"]
background_mode = 2
sky = SubResource("Sky_procedural")
ambient_light_source = 3
ambient_light_color = Color(0.933594, 0.846958, 0.800123, 1)
ambient_light_sky_contribution = 0.8
ambient_light_energy = 0.3
glow_enabled = true
glow_intensity = 0.3
glow_strength = 0.8
glow_bloom = 0.1
glow_blend_mode = 0
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.7, 0.75, 0.85, 1)
volumetric_fog_emission_energy = 0.0

[node name="DreamTest" type="Node3D"]

[node name="Ground" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_7bgix")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_uwc0v")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.70710677, 0.20954232, 0.67534584, -0.70710677, 0.20954232, 0.67534584, 0, -0.95508325, 0.2963376, 0, 0, 0)
light_color = Color(1, 0.9389985, 0.8845483, 1)
light_angular_distance = 1.5
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 1.0
directional_shadow_mode = 1
directional_shadow_blend_splits = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xn32g")

[node name="Sky" type="Node" parent="." node_paths=PackedStringArray("environment", "sun")]
script = ExtResource("6_sky")
time_of_day = 0.04788266743180705
cycle_speed = 0.00166667
environment = NodePath("../WorldEnvironment")
sun = NodePath("../Sun")

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("1_h54ki")

[node name="Toast" parent="GameUI" instance=ExtResource("3_vx18r")]

[node name="CombatStats" type="VBoxContainer" parent="GameUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 140.0

[node name="HPBar" type="ProgressBar" parent="GameUI/CombatStats"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="GameUI/CombatStats/HPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "HP: 100 / 100"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="GameUI/CombatStats"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="GameUI/CombatStats/StaminaBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 1, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Stamina: 100 / 100"
horizontal_alignment = 1

[node name="Crosshair" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VLine" type="ColorRect" parent="GameUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="HLine" type="ColorRect" parent="GameUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="PauseMenu" parent="GameUI" instance=ExtResource("4_pause")]
